[package]
name = "peernet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://github.com/rust-lang/socket2/issues/378
[dependencies]
parking_lot = "0.12"
rand = { version = "0.8", features = ["default", "small_rng"] }
crossbeam = "0.8"
quiche = "0.16"
enum_delegate = "0.2.0"
mio = { version = "0.8", features = ["os-poll", "net"] }
serde = { version = "1.0", features = ["derive"] }
stream_limiter = "3.2.0"
thiserror = "1.0.39"
log = "0.4.19"

[dev-dependencies]
serde_json = "1.0.95"

[features]
heavy_testing = []
deadlock_detection = ["parking_lot/deadlock_detection"]
